Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130288

QDoubleSpinBox layout still broken in Windows 11

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.8.0
    • Widgets: Styles
    • None
    • Windows 11, Qt 6.8.0, MSVC 2022 (latest), NVIDIA Quadro P4000, 100% display size on a 1080P monitor.
    • Windows
    • 96d46cad4 (dev), 9107817ea (6.8)

    Description

      QDoubleSpinBox spinboxes in some cases still have a broken layout. Attached the Qt project used.

      The QSpinBoxes appear to have no problems.

      How it looks with the "windows11" style (broken): '%' suffixes is missing and the one with no suffix has some hidden numbers.

      How it looks with the "windowsVista" style (correct).

       

      QtCreator UI project:

       

      Attachments

        For Gerrit Dashboard: QTBUG-130288
        # Subject Branch Project Status CR V

        Activity

          People

            wladimir.leuschner Wladimir Leuschner
            mircomir Mirco Miranda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes